--- a/src/app/aaacesa/dialogs/dialog-create-exportaciones.component.html
+++ b/src/app/aaacesa/dialogs/dialog-create-exportaciones.component.html
@@ -186,12 +186,12 @@
                   <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-4">                                                                                                
 
                     <div class="col-12">
-                        <h5 class="detail-text text-muted">Guía Master </h5>
+                        <div class="detail-text text-muted">Guía Master </div>
                         <p class="detail-text">{{model.Master}}</p>
                     </div>
 
                     <div class="col-12">
-                        <h5 class="detail-text text-muted">Guía House </h5>
+                        <div class="detail-text text-muted">Guía House </div>
                         <p class="detail-text">{{model.House}}</p>
                     </div>                    
                                                                         
@@ -203,24 +203,24 @@
 
                         <div class="row">
                             <div class="col-xs-12 col-sm-12 col-lg-4">
-                                <h5 class="detail-text text-muted">Pedimento</h5>
+                                <div class="detail-text text-muted">Pedimento</div>
                                 <p class="detail-text">{{model.Pedimento}}</p>
                             </div> 
 
                             <div class="col-xs-12 col-sm-12 col-lg-4">
-                                <h5 class="detail-text text-muted">Piezas </h5>
+                                <div class="detail-text text-muted">Piezas </div>
                                 <p class="detail-text">{{model.Piezas}}</p>
                             </div>
 
                             <div class="col-xs-12 col-sm-12 col-lg-4">
-                                <h5 class="detail-text text-muted">Peso</h5>
+                                <div class="detail-text text-muted">Peso</div>
                                 <p class="detail-text">{{model.Peso}} Kg</p>
                             </div>                                                     
                         </div> 
                         
                         <div class="row">
                             <div class="col-xs-12 col-sm-12 col-lg-8">
-                                <h5 class="detail-text text-muted">Fecha Entrada Mercancía</h5>
+                                <div class="detail-text text-muted">Fecha Entrada Mercancía</div>
                                 <p class="detail-text">{{model.FechaEntradaMercancia?.slice(0,4)}}/{{model.FechaEntradaMercancia?.slice(4,6)}}/{{model.FechaEntradaMercancia?.slice(6,9)}} {{model.FechaEntradaMercancia?.slice(9,14)}}</p>
                             </div>
                         </div>
