--- a/src/app/aaacesa/dialogs/dialog-create-previos.component.html
+++ b/src/app/aaacesa/dialogs/dialog-create-previos.component.html
@@ -259,15 +259,15 @@
                   <div class="col-12 col-md-12">                    
                     <div class="row mb-1">
                       <div class="col-md-4">
-                        <h5 class="detail-text text-muted">Guía Master </h5>
+                        <div class="detail-text text-muted">Guía Master </div>
                         <p class="detail-text">{{model.Master}}</p>
                       </div>
                       
                       <div class="col-md-4">
                         <div class="row justify-content-end">
                           <div class="col">
-                            <!-- <h5 class="detail-text referencia">Referencia: Sin Referencia</h5>  -->
-                            <h5 class="detail-text referencia">Referencia: {{ referencia }}</h5>                             
+                            <!-- <div class="detail-text referencia">Referencia: Sin Referencia</div>  -->
+                            <div class="detail-text referencia">Referencia: {{ referencia }}</div>                             
                           </div>                          
                         </div>
                       </div>                        
@@ -275,45 +275,45 @@
                 
                     <div class="row mb-1">
                       <div class="col-md-4">
-                        <h5 class="detail-text text-muted">Guía House</h5>
+                        <div class="detail-text text-muted">Guía House</div>
                         <p class="detail-text">{{model.House}}</p>
                       </div>
 
                       <div class="col-md-4">
-                        <h5 class="detail-text text-muted">Nombre Completo</h5>
+                        <div class="detail-text text-muted">Nombre Completo</div>
                         <p class="detail-text">{{model.Nombre}} {{model.Paterno}} {{model.Materno}}</p>
                       </div>
 
                       <div class="col-md-4">
-                        <h5 class="detail-text text-muted">No. Gafete</h5>
+                        <div class="detail-text text-muted">No. Gafete</div>
                         <p class="detail-text">{{model.NumGafete}}</p>
                       </div>
                     </div>   
                 
                     <div class="row mb-1">
                       <div class="col-md-4">
-                        <h5 class="detail-text text-muted">Patente</h5> 
+                        <div class="detail-text text-muted">Patente</div> 
                         <p class="detail-text">{{model.Patente}}</p>
                       
                       </div>
                       <div class="col-md-4">
-                        <h5 class="detail-text text-muted">Piezas</h5>
+                        <div class="detail-text text-muted">Piezas</div>
                         <p class="detail-text">{{model.Piezas}}</p>
                       </div>
                       
                       <div class="col-md-4">
-                        <h5 class="detail-text text-muted">Peso</h5>
+                        <div class="detail-text text-muted">Peso</div>
                         <p class="detail-text">{{model.Peso}} Kg</p>
                       </div>
                     </div>
                 
                     <div class="row mb-3">
                       <div class="col-md-4">
-                        <h5 class="detail-text text-muted">Fecha y hora</h5> 
+                        <div class="detail-text text-muted">Fecha y hora</div> 
                         <p class="detail-text">{{model.FechaPrevio?.slice(0,4)}}/{{model.FechaPrevio?.slice(4,6)}}/{{model.FechaPrevio?.slice(6,9)}} {{model.FechaPrevio?.slice(9,14)}}</p>                        
                       </div>
                       <div class="col-md-4">
-                        <h5 class="detail-text text-muted">Etiquetado</h5>
+                        <div class="detail-text text-muted">Etiquetado</div>
                         <h6 class="detail-text">{{model.Etiquetado ? 'Sí' : 'No'}}</h6>
                       </div>                                           
                     </div>
