--- a/src/app/aaacesa/dialogs/dialog-create-salida.component.html
+++ b/src/app/aaacesa/dialogs/dialog-create-salida.component.html
@@ -205,17 +205,17 @@
                     </div> -->
 
                     <div class="col-12">
-                      <h5 class="detail-text text-muted">Guia Master </h5>
+                      <div class="detail-text text-muted">Guia Master </div>
                       <p class="detail-text">{{model.Master}}</p>
                     </div>
 
                     <div class="col-12">
-                      <h5 class="detail-text text-muted">Guia House </h5>
+                      <div class="detail-text text-muted">Guia House </div>
                       <p class="detail-text">{{model.House}}</p>
                     </div>
 
                     <div class="col-12">
-                      <h5 class="detail-text text-muted">Patente</h5> 
+                      <div class="detail-text text-muted">Patente</div> 
                       <p class="detail-text">{{model.Patente}}</p>
                     </div>                                                                             
                   </div>  
@@ -227,7 +227,7 @@
                     <div class="row">
                       <div class="col-xs-12 col-sm-12 col-lg-8">
                         <div class="referencia">
-                          <h5 class="detail-text">Referencia: {{referencia}}</h5>                    
+                          <div class="detail-text">Referencia: {{referencia}}</div>                    
                         </div>
                       </div>
                       <!-- <div class="col-xs-12 col-sm-12 col-lg-4">
@@ -243,23 +243,23 @@
 
                     <div class="row">
                       <div class="col-xs-12 col-sm-12 col-lg-8">
-                        <h5 class="detail-text text-muted">RFC Facturar </h5>
+                        <div class="detail-text text-muted">RFC Facturar </div>
                         <p class="detail-text">{{model.RFCFacturar}}</p>
                       </div>
 
                       <div class="col-xs-12 col-sm-12 col-lg-4">
-                        <h5 class="detail-text text-muted">Pedimento</h5>
+                        <div class="detail-text text-muted">Pedimento</div>
                         <p class="detail-text">{{model.Pedimento}}</p>
                       </div>                                                        
                     </div>
 
                     <div class="row">                              
                       <div class="col-xs-12 col-sm-12 col-lg-8">
-                        <h5 class="detail-text text-muted">Subdivision</h5>
+                        <div class="detail-text text-muted">Subdivision</div>
                         <p class="detail-text">{{model.Subdivision ? 'Sí' : 'No' }}</p>
                       </div>
                       <div class="col-xs-12 col-sm-12 col-lg-4">
-                        <h5 class="detail-text text-muted">Fecha Salida</h5>
+                        <div class="detail-text text-muted">Fecha Salida</div>
                         <p class="detail-text">{{model.FechaSalida?.slice(0,4)}}/{{model.FechaSalida?.slice(4,6)}}/{{model.FechaSalida?.slice(6,9)}} {{model.FechaSalida?.slice(9,14)}}</p>
                       </div>
                     </div>                            
