--- a/src/app/aaacesa/bitacoras/bitacoras.component.html
+++ b/src/app/aaacesa/bitacoras/bitacoras.component.html
@@ -13,7 +13,7 @@
             <!-- busqueda rango fechas -->
             <div class="col-lg-3 mb-1 invalid--no-color">
               <mat-form-field class="input-full-width">
-                <input matInput type="text" [(ngModel)]="rangoFechaSearch" #fechaSearch bsDaterangepicker [bsConfig]="{ rangeInputFormat : 'DD-MM-YYYY' }" placement="right top" class="rangoFecha" placeholder="Rango de Fecha" required>
+                <input matInput type="text" [(ngModel)]="rangoFechaSearch" #fechaSearch bsDaterangepicker [bsConfig]="{ rangeInputFormat : 'DD-MM-YYYY' }" placement="right top" class="rangoFecha" placeholder="Rango de Fecha">
               </mat-form-field>
             </div>
 
@@ -91,7 +91,7 @@
 
            <!-- Hora Column -->
            <ng-container matColumnDef="Hora">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Hora de acceso </th>
+            <th mat-header-cell *matHeaderCellDef> Hora de acceso </th>
             <td mat-cell *matCellDef="let element"> {{ element.FechaCreacion.split(' ')[1] }} </td>
           </ng-container>
 
