--- a/src/app/aaacesa/dialogs/dialog-create-exportaciones.component.html
+++ b/src/app/aaacesa/dialogs/dialog-create-exportaciones.component.html
@@ -45,9 +45,9 @@
             </div>
           </div>   
 
-          <div class="row mt-5">
+          <div class="row mt-3">
             <div class="col-lg-12 text-center">
-              <button (click)="validarCampos(0)" matStepperNext class="btn btn-pill btn-primary">Siguiente</button>            
+              <button (click)="validarCampos(0)" matStepperNext class="btn btn-pill btn-primary btn-sm">Siguiente</button>            
             </div>
           </div>
       </form>
@@ -122,8 +122,8 @@
 
           <div class="row mt-5">
             <div class="col-lg-12 text-center">
-              <button matStepperPrevious class="btn btn-pill btn-primary mr-4">Regresar</button>            
-              <button (click)="validarCampos(1)" matStepperNext class="btn btn-pill btn-primary">Siguiente</button>            
+              <button matStepperPrevious class="btn btn-pill btn-primary btn-sm mr-4">Regresar</button>            
+              <button (click)="validarCampos(1)" matStepperNext class="btn btn-pill btn-primary btn-sm">Siguiente</button>            
             </div>
           </div>
       </div>
@@ -164,8 +164,8 @@
                       
         <div class="row mt-3">
           <div class="col-lg-12 text-center">
-            <button matStepperPrevious class="btn btn-pill btn-primary mr-4">Regresar</button>            
-            <button (click)="guardarFirstForm()" matStepperNext class="btn btn-pill btn-primary">Siguiente</button>            
+            <button matStepperPrevious class="btn btn-pill btn-primary btn-sm mr-4">Regresar</button>            
+            <button (click)="guardarFirstForm()" matStepperNext class="btn btn-pill btn-primary btn-sm">Siguiente</button>            
           </div>
         </div>
 
@@ -195,8 +195,8 @@
                         <p class="detail-text">{{model.House}}</p>
                     </div>                    
                                                                         
-                    </div>  
-                    <!-- End Left Inside -->
+                  </div>  
+                  <!-- End Left Inside -->
 
                     <!-- Start Right Inside -->
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-8">                   
@@ -246,8 +246,8 @@
 
         <div class="row mt-3">
           <div class="col-lg-12 text-center">
-            <button matStepperPrevious class="btn btn-pill btn-primary mr-4">Regresar</button>            
-            <button (click)="crearExportacion()" class="btn btn-pill btn-primary">Enviar</button>
+            <button matStepperPrevious class="btn btn-pill btn-primary btn-sm mr-4">Regresar</button>            
+            <button (click)="crearExportacion()" class="btn btn-pill btn-primary btn-sm">Enviar</button>
           </div>
         </div>
       </div>
@@ -265,7 +265,7 @@
           {{responseMessage}}
         </div>
         <div class="col-12 text-center mt-5 ">
-          <button (click)="closeDialog('true')" class="btn btn-pill btn-primary">Aceptar</button>  
+          <button (click)="closeDialog('true')" class="btn btn-pill btn-primary btn-sm">Aceptar</button>  
         </div>
       </div>        
     </div>
