--- a/src/app/aaacesa/prealertas/prealertas.component.html
+++ b/src/app/aaacesa/prealertas/prealertas.component.html
@@ -77,10 +77,10 @@
 
         <div class="col-lg-3">
           <div class="row justify-content-center">
-            <div class="col-xs-6 col-sm-6 col-md-12 col-lg-12 col-xl-5 mb-1 pr-0 align-self-end">
+            <div class="col-xs-6 col-sm-6 col-md-12 col-lg-12 col-xl-5 mb-1 align-self-end">
               <button (click)="buscarPrealertas()" class="btn btn-pill btn-primary btn-sm"> <i class="fas fa-search"></i> Buscar</button>
             </div>
-            <div class="col-xs-6 col-sm-6 col-md-12 col-lg-12 col-xl-7 mb-1 pl-0 align-self-start">              
+            <div class="col-xs-6 col-sm-6 col-md-12 col-lg-12 col-xl-7 mb-1 align-self-start">              
               <button (click)="buscaPrealertasNueva()" class="btn btn-pill btn-primary btn-sm"> Nueva Busqueda</button>
             </div>
           </div>
