--- a/src/app/aaacesa/dialogs/dialog-create-exportaciones.component.html
+++ b/src/app/aaacesa/dialogs/dialog-create-exportaciones.component.html
@@ -59,7 +59,7 @@
               
       <div class="container mt-3">
         <form [formGroup]="secondFormGroup">
-          <div class="row mb-3">            
+          <div class="row mb-1">            
               <div class="col-lg-4">
                 <mat-form-field class="input-full-width">
                   <input matInput type="text" formControlName="pedimentoCtrl" placeholder="Pedimento"/>
@@ -88,7 +88,7 @@
                           
             </div>
 
-            <div class="row mb-3">                              
+            <div class="row mb-1">                              
                 <div class="col-lg-8">
                   <mat-form-field class="input-full-width">
                     <input matInput type="text" formControlName="fechaEntradaMercanciaCtrl" #dp="bsDatepicker" bsDatepicker [minDate]="minDate" placeholder="Fecha Entrega de Mercancía">
@@ -110,7 +110,7 @@
                 
             </div>
 
-            <div class="row mb-3">
+            <div class="row mb-1">
               <div class="col-lg-12">
                 <mat-form-field class="input-full-width">
                   <textarea matInput formControlName="comentarioCtrl" placeholder="Comentario"></textarea>
@@ -120,7 +120,7 @@
                               
           </form>
 
-          <div class="row mt-5">
+          <div class="row mt-3">
             <div class="col-lg-12 text-center">
               <button matStepperPrevious class="btn btn-pill btn-primary btn-sm mr-4">Regresar</button>            
               <button (click)="validarCampos(1)" matStepperNext class="btn btn-pill btn-primary btn-sm">Siguiente</button>            
@@ -130,14 +130,14 @@
                 
     </mat-step>
 
-    <!-- <mat-step [completed]="model.Documentos?.length >= 1" >       -->
-    <mat-step>      
+    <mat-step [completed]="model.Documentos?.length >= 1" >      
+    <!-- <mat-step>       -->
       <!-- <ng-template matStepLabel>Subir documentos</ng-template> -->
 
       <div class="container mt-3">
         <p>Subir documentos: Guia Master, Guia House, Gafete, Etiquetado</p>  
         
-        <div class="row mb-3">                     
+        <div class="row mb-1">                     
           <div class="col-lg-12 mb-3">
             <div ngfDrop selectable="1" multiple="1"
               [(files)]="files"
