--- a/src/app/aaacesa/dialogs/dialog-create-prealertas.component.html
+++ b/src/app/aaacesa/dialogs/dialog-create-prealertas.component.html
@@ -45,9 +45,9 @@
             </div>
           </div>   
 
-          <div class="row mt-5">
+          <div class="row mt-3">
             <div class="col-lg-12 text-center">
-              <button (click)="validarCampos(0)" matStepperNext class="btn btn-pill btn-primary">Siguiente</button>            
+              <button (click)="validarCampos(0)" matStepperNext class="btn btn-pill btn-primary btn-sm">Siguiente</button>            
             </div>
           </div>
       </form>
@@ -59,7 +59,7 @@
               
       <div class="container mt-3">
         <form [formGroup]="secondFormGroup">
-          <div class="row mb-3">            
+          <div class="row mb-1">            
               <div class="col-lg-4">
                 <mat-form-field class="input-full-width">
                   <input matInput type="text" formControlName="referenciaCtrl" placeholder="Referencia"/>
@@ -88,7 +88,7 @@
                           
             </div>
 
-            <div class="row mb-3">                              
+            <div class="row mb-1">                              
                 <div class="col-lg-4">
                   <mat-form-field class="input-full-width">
                     <input matInput type="text" formControlName="fechaArriboCtrl" #dp="bsDatepicker" bsDatepicker [minDate]="minDate" placeholder="Fecha estimada de Arribo">
@@ -102,7 +102,7 @@
                   <mat-form-field style="width: 49%;" >
                     <input matInput type="number" formControlName="horaPrevioCtrl" style="text-align:center;" min="0" max="23" placeholder="Hrs" />
                   </mat-form-field>
-                  <strong style="font-size:1rem;">:</strong>
+                  <strong style="font-size:.5rem;">:</strong>
                   <mat-form-field style="width: 49%;">
                     <input matInput type="number" formControlName="minutoPrevioCtrl" style="text-align:center;" min="0" max="59"  placeholder="Mins" />
                   </mat-form-field>
@@ -123,7 +123,7 @@
                 </div>                  
             </div>
 
-            <div class="row mb-3">  
+            <div class="row mb-1">  
 
               <div class="col-lg-8">
                 <mat-form-field class="input-full-width">
@@ -155,7 +155,7 @@
                                           
             </div>   
             
-            <div class="row mb-3">
+            <div class="row mb-1">
               <div class="col-lg-4">
                 <mat-form-field class="input-full-width">
                   <mat-select formControlName="usoCFDICtrl" placeholder="Uso de CFDI" #singleSelect>
@@ -195,13 +195,13 @@
 
             </div>
 
-            <div class="row mb-4">
+            <div class="row mb-1">
               <div class="col-lg-4">                
                   <mat-slide-toggle formControlName="consolidadoCtrl" color="primary">Consolidado</mat-slide-toggle>                                  
               </div>           
             </div>
 
-            <div class="row mb-3">
+            <div class="row mb-1">
               <div class="col-lg-12">
                 Instrucciones de Manejo
               </div>
@@ -217,7 +217,7 @@
               </div>
             </div>
 
-            <div class="row mb-3">
+            <div class="row mb-1">
               <div class="col-lg-12">
                 <mat-form-field class="input-full-width">
                   <textarea matInput formControlName="comentarioCtrl" placeholder="Comentario"></textarea>
@@ -226,10 +226,10 @@
             </div>
           </form>
 
-          <div class="row mt-5">
+          <div class="row mt-3">
             <div class="col-lg-12 text-center">
-              <button matStepperPrevious class="btn btn-pill btn-primary mr-4">Regresar</button>            
-              <button (click)="validarCampos(1)" matStepperNext class="btn btn-pill btn-primary">Siguiente</button>            
+              <button matStepperPrevious class="btn btn-pill btn-primary btn-sm mr-4">Regresar</button>            
+              <button (click)="validarCampos(1)" matStepperNext class="btn btn-pill btn-primary btn-sm">Siguiente</button>            
             </div>
           </div>
       </div>
@@ -270,8 +270,8 @@
                       
         <div class="row mt-3">
           <div class="col-lg-12 text-center">
-            <button matStepperPrevious class="btn btn-pill btn-primary mr-4">Regresar</button>            
-            <button (click)="guardarFirstForm()" matStepperNext class="btn btn-pill btn-primary">Siguiente</button>            
+            <button matStepperPrevious class="btn btn-pill btn-primary btn-sm mr-4">Regresar</button>            
+            <button (click)="guardarFirstForm()" matStepperNext class="btn btn-pill btn-primary btn-sm">Siguiente</button>            
           </div>
         </div>
 
@@ -403,8 +403,8 @@
 
         <div class="row mt-3">
           <div class="col-lg-12 text-center">
-            <button matStepperPrevious class="btn btn-pill btn-primary mr-4">Regresar</button>            
-            <button (click)="crearPrealerta()" class="btn btn-pill btn-primary">Enviar</button>
+            <button matStepperPrevious class="btn btn-pill btn-primary btn-sm mr-4">Regresar</button>            
+            <button (click)="crearPrealerta()" class="btn btn-pill btn-primary btn-sm">Enviar</button>
           </div>
         </div>
       </div>
@@ -422,7 +422,7 @@
           {{responseMessage}}
         </div>
         <div class="col-12 text-center mt-5 ">
-          <button (click)="closeDialog('true')" class="btn btn-pill btn-primary">Aceptar</button>  
+          <button (click)="closeDialog('true')" class="btn btn-pill btn-primary btn-sm">Aceptar</button>  
         </div>
       </div>        
     </div>
