--- a/src/app/aaacesa/dialogs/dialog-create-previos.component.html
+++ b/src/app/aaacesa/dialogs/dialog-create-previos.component.html
@@ -47,15 +47,15 @@
                     <input matInput type="text" formControlName="referenciaCtrl" placeholder="Referencia"/>                      
                     <!-- <input matInput type="text" (input)="checkReferencia()" formControlName="referenciaCtrl" placeholder="Referencia"/>                       -->
                   </mat-form-field>                 
-                  <button (click)="checkReferencia()" style="float: right;" class="btn btn-pill btn-primary">Checar referencia</button>            
+                  <button (click)="checkReferencia()" style="float: right;" class="btn btn-pill btn-primary btn-sm">Checar referencia</button>            
                 </div>
               </div>          
             </div>
           </div>   
 
-          <div class="row mt-5">
+          <div class="row mt-3">
             <div class="col-lg-12 text-center">
-              <button (click)="validarCampos(0)" matStepperNext class="btn btn-pill btn-primary">Siguiente</button>            
+              <button (click)="validarCampos(0)" matStepperNext class="btn btn-pill btn-primary btn-sm">Siguiente</button>            
             </div>
           </div>
       </form>
@@ -68,7 +68,7 @@
         <div class="container mt-3">
           <form [formGroup]="secondFormGroup">
         
-              <div class="row mb-3">                     
+              <div class="row mb-1">                     
                 <div class="col-lg-4">  
                   <mat-form-field class="input-full-width">
                     <input matInput type="text" formControlName="piezasCtrl" placeholder="Piezas"/>
@@ -91,7 +91,7 @@
                 </div>                                   
               </div>
 
-              <div class="row mb-3">                 
+              <div class="row mb-1">                 
                 <div class="col-lg-6">
                   <mat-form-field class="input-full-width">
                     <input matInput type="text" formControlName="fechaPrevioCtrl" #dp="bsDatepicker" bsDatepicker [minDate]="minDate" placeholder="Fecha">
@@ -114,10 +114,10 @@
               
             </form>
 
-            <div class="row mt-5">
+            <div class="row mt-3">
               <div class="col-lg-12 text-center">
-                <button matStepperPrevious class="btn btn-pill btn-primary mr-4">Regresar</button>            
-                <button (click)="validarCampos(1)" matStepperNext class="btn btn-pill btn-primary">Siguiente</button>            
+                <button matStepperPrevious class="btn btn-pill btn-primary btn-sm mr-4">Regresar</button>            
+                <button (click)="validarCampos(1)" matStepperNext class="btn btn-pill btn-primary btn-sm">Siguiente</button>            
               </div>
             </div>
         </div>
@@ -129,7 +129,7 @@
       <div class="container mt-3">
         <form [formGroup]="thirdFormGroup">
           
-          <div class="row mb-3">     
+          <div class="row mb-1">     
             <div class="col-lg-6">
               <mat-form-field class="input-full-width">
                 <input matInput type="text" (change)="checkGafete()" formControlName="numGafeteCtrl" placeholder="No. Gafete"/>
@@ -155,7 +155,7 @@
             </div>                               
           </div>  
 
-          <div class="row mb-3">            
+          <div class="row mb-1">            
               <div class="col-lg-4">
                 <mat-form-field class="input-full-width">
                   <input matInput type="text" formControlName="nombreCtrl" placeholder="Nombre del tramitador"/>
@@ -182,7 +182,7 @@
               </div>              
             </div>          
 
-            <div class="row mb-3">
+            <div class="row mb-1">
               <div class="col-lg-12">
                 <mat-form-field class="input-full-width">
                   <textarea matInput formControlName="comentarioCtrl" placeholder="Comentario"></textarea>
@@ -191,10 +191,10 @@
             </div>
           </form>
 
-          <div class="row mt-5">
+          <div class="row mt-3">
             <div class="col-lg-12 text-center">
-              <button matStepperPrevious class="btn btn-pill btn-primary mr-4">Regresar</button>            
-              <button (click)="validarCampos(2)" matStepperNext class="btn btn-pill btn-primary">Siguiente</button>            
+              <button matStepperPrevious class="btn btn-pill btn-primary btn-sm mr-4">Regresar</button>            
+              <button (click)="validarCampos(2)" matStepperNext class="btn btn-pill btn-primary btn-sm">Siguiente</button>            
             </div>
           </div>
       </div>
@@ -207,7 +207,7 @@
       <div class="container mt-3">
         <p>Subir documentos: Guia Master, Guia House, Gafete, Etiquetado<small> (mínimo subir un documento)</small></p>  
         
-        <div class="row mb-3">                     
+        <div class="row mb-1">                     
           <div class="col-lg-12 mb-3">
             <div ngfDrop selectable="1" multiple="1"
               [(files)]="files"
@@ -241,8 +241,8 @@
                       
         <div class="row mt-3">
           <div class="col-lg-12 text-center">
-            <button matStepperPrevious class="btn btn-pill btn-primary mr-4">Regresar</button>            
-            <button (click)="guardarFirstForm()" matStepperNext class="btn btn-pill btn-primary">Siguiente</button>            
+            <button matStepperPrevious class="btn btn-pill btn-primary btn-sm mr-4">Regresar</button>            
+            <button (click)="guardarFirstForm()" matStepperNext class="btn btn-pill btn-primary btn-sm">Siguiente</button>            
           </div>
         </div>
 
@@ -307,7 +307,7 @@
                       </div>
                     </div>
                 
-                    <div class="row mb-3">
+                    <div class="row mb-1">
                       <div class="col-md-4">
                         <div class="detail-text text-muted">Fecha y hora</div> 
                         <p class="detail-text">{{model.FechaPrevio?.slice(0,4)}}/{{model.FechaPrevio?.slice(4,6)}}/{{model.FechaPrevio?.slice(6,9)}} {{model.FechaPrevio?.slice(9,14)}}</p>                        
@@ -320,7 +320,7 @@
 
                     <hr class="dividerb">
                   
-                    <div class="row mt-4 mb-3">                
+                    <div class="row mt-4">                
                         <div *ngFor="let file of model.Documentos" class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
                           <!-- <h1 style="font-size: 3rem; text-align: center"><i class="fas {{file.NombreDocumento | fileIconPipe}}"></i></h1> -->
                           <img class="file__icon file__icon--sm" src="../../../assets/img/iconos/{{Pendiente | fileIconStatusPipe}}" />
@@ -335,8 +335,8 @@
 
                 <div class="row mt-3">
                   <div class="col-lg-12 text-center">
-                    <button matStepperPrevious class="btn btn-pill btn-primary mr-4">Regresar</button>            
-                    <button (click)="crearPrevio()" class="btn btn-pill btn-primary">Enviar</button>
+                    <button matStepperPrevious class="btn btn-pill btn-primary btn-sm mr-4">Regresar</button>            
+                    <button (click)="crearPrevio()" class="btn btn-pill btn-primary btn-sm">Enviar</button>
                   </div>
                 </div>
 
@@ -354,7 +354,7 @@
           {{responseMessage}}
         </div>
         <div class="col-12 text-center mt-5 ">
-          <button (click)="closeDialog('true')" class="btn btn-pill btn-primary">Aceptar</button>  
+          <button (click)="closeDialog('true')" class="btn btn-pill btn-primary btn-sm">Aceptar</button>  
         </div>
       </div>        
     </div>
