--- a/src/app/aaacesa/dialogs/dialog-create-salida.component.html
+++ b/src/app/aaacesa/dialogs/dialog-create-salida.component.html
@@ -47,15 +47,15 @@
                   <mat-form-field class="input-full-width">    
                     <input matInput type="text" formControlName="referenciaCtrl" placeholder="Referencia"/>                      
                   </mat-form-field> 
-                  <button (click)="checkReferencia()" style="float: right;" class="btn btn-pill btn-primary">Checar referencia</button>                            
+                  <button (click)="checkReferencia()" style="float: right;" class="btn btn-pill btn-primary btn-sm">Checar referencia</button>                            
                 </div>
               </div>          
             </div>
           </div>   
 
-          <div class="row mt-5">
+          <div class="row mt-3">
             <div class="col-lg-12 text-center">
-              <button (click)="validarCampos(0)" matStepperNext class="btn btn-pill btn-primary">Siguiente</button>            
+              <button (click)="validarCampos(0)" matStepperNext class="btn btn-pill btn-primary btn-sm">Siguiente</button>            
             </div>
           </div>
       </form>
@@ -67,7 +67,7 @@
               
       <div class="container mt-3">
         <form [formGroup]="secondFormGroup">
-          <div class="row mb-3">            
+          <div class="row mb-1">            
               <div class="col-lg-4">
                 <mat-form-field class="input-full-width">
                   <input matInput type="text" formControlName="rfcFacturarCtrl" placeholder="RFC Facturar"/>
@@ -95,7 +95,7 @@
                           
             </div>
 
-            <div class="row mb-3">
+            <div class="row mb-1">
               <div class="col-lg-4">
                 <mat-form-field class="input-full-width">
                   <input matInput type="text" class="no-spinners" formControlName="patenteCtrl" placeholder="Patente"/>
@@ -128,7 +128,7 @@
                 </div>                               
             </div>                                              
 
-            <div class="row mb-3">
+            <div class="row mb-1">
               <div class="col-lg-12">
                 <mat-form-field class="input-full-width">
                   <textarea matInput formControlName="comentarioCtrl" placeholder="Comentario"></textarea>
@@ -137,10 +137,10 @@
             </div>
           </form>
 
-          <div class="row mt-5">
+          <div class="row mt-3">
             <div class="col-lg-12 text-center">
-              <button matStepperPrevious class="btn btn-pill btn-primary mr-4">Regresar</button>            
-              <button (click)="validarCampos(1)" matStepperNext class="btn btn-pill btn-primary">Siguiente</button>            
+              <button matStepperPrevious class="btn btn-pill btn-primary btn-sm mr-4">Regresar</button>            
+              <button (click)="validarCampos(1)" matStepperNext class="btn btn-pill btn-primary btn-sm">Siguiente</button>            
             </div>
           </div>
       </div>
@@ -153,7 +153,7 @@
       <div class="container mt-3">
         <p>Subir documentos: Guia Master, Gafete, Factura y Pedimento<small> (mínimo subir un documento)</small></p>  
         
-        <div class="row mb-3">                     
+        <div class="row mb-1">                     
           <div class="col-lg-12 mb-3">
             <div ngfDrop selectable="1" multiple="1"
               [(files)]="files"
@@ -180,8 +180,8 @@
                       
         <div class="row mt-3">
           <div class="col-lg-12 text-center">
-            <button matStepperPrevious class="btn btn-pill btn-primary mr-4">Regresar</button>            
-            <button (click)="guardarFirstForm()" matStepperNext class="btn btn-pill btn-primary">Siguiente</button>            
+            <button matStepperPrevious class="btn btn-pill btn-primary btn-sm mr-4">Regresar</button>            
+            <button (click)="guardarFirstForm()" matStepperNext class="btn btn-pill btn-primary btn-sm">Siguiente</button>            
           </div>
         </div>
 
@@ -270,7 +270,7 @@
 
                 <hr class="dividerb">
 
-                <div class="row mt-4 mb-3">                
+                <div class="row mt-4">                
                   <div *ngFor="let file of model.Documentos" class="col col-lg-2">
                     <!-- <h1 style="font-size: 3rem; text-align: center"><i class="fas {{file.NombreDocumento | fileIconPipe}}"></i></h1> -->
                     <img class="file__icon file__icon--sm" src="../../../assets/img/iconos/{{Pendiente | fileIconStatusPipe}}" />
@@ -284,8 +284,8 @@
 
         <div class="row mt-3">
           <div class="col-lg-12 text-center">
-            <button matStepperPrevious class="btn btn-pill btn-primary mr-4">Regresar</button>            
-            <button (click)="crearSalida()" class="btn btn-pill btn-primary">Enviar</button>
+            <button matStepperPrevious class="btn btn-pill btn-primary btn-sm mr-4">Regresar</button>            
+            <button (click)="crearSalida()" class="btn btn-pill btn-primary btn-sm">Enviar</button>
           </div>
         </div>
       </div>
@@ -303,7 +303,7 @@
           {{responseMessage}}
         </div>
         <div class="col-12 text-center mt-5 ">
-          <button (click)="closeDialog('true')" class="btn btn-pill btn-primary">Aceptar</button>  
+          <button (click)="closeDialog('true')" class="btn btn-pill btn-primary btn-sm">Aceptar</button>  
         </div>
       </div>        
     </div>
