--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -8,8 +8,8 @@
   [mobileAsideMenuToggler]="false">
   
   
-  <span class="label label-default d-none d-lg-block small mr-auto">Bienvenido! {{user}} <small class="text-muted d-none d-lg-block">Última sesión {{lastTime}}</small> </span>
-  <span class="label label-default d-none d-lg-block small"><small class="text-muted">Sesión actual {{logTime | date:'dd/MMM/y'}} &nbsp;|&nbsp;hora {{logTime | date:'h:mm a'}}</small></span>
+  <span class="label label-default d-none d-lg-block small mr-auto ml-3">Bienvenido! {{user}} <small class="text-muted d-none d-lg-block">Última sesión {{lastTime}}</small> </span>
+  <span class="label label-default d-none d-lg-block small ml-3"><small class="text-muted">Sesión actual {{logTime | date:'dd/MMM/y'}} &nbsp;|&nbsp;hora {{logTime | date:'h:mm a'}}</small></span>
   <ul class="nav navbar-nav">
     <li class="nav-item dropdown d-md-down-none" dropdown placement="bottom right">
       <a class="nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" dropdownToggle (click)="false">
@@ -61,10 +61,10 @@
         <span class="icon-options-vertical"></span>
       </a>
       <div class="dropdown-menu dropdown-menu-right" *dropdownMenu aria-labelledby="simple-dropdown">
-        <div class="dropdown-header text-center"><strong>Administrador</strong></div>
+        <div class="dropdown-header text-center"><strong>{{ rolUser }}</strong></div>
         <div class="divider"></div>
-        <a class="dropdown-item" *ngIf="rolUser == 'ADMIN' || rolUser == 'MAESTRO' " [routerLink]="" (click)="redirect('bitacoras')" ><i class="icon-note"></i>Bitácora</a>
-        <div class="dropdown-divider" *ngIf="rolUser == 'ADMIN' || rolUser == 'MAESTRO' "></div>
+        <a class="dropdown-item" [routerLink]="" (click)="redirect('bitacoras')" ><i class="icon-note"></i>Bitácora</a>
+        <div class="dropdown-divider"></div>
         <a class="dropdown-item" *ngIf="rolUser == 'ADMIN' || rolUser == 'MAESTRO' " [routerLink]="" (click)="redirect('adminuser')" ><i class="icon-people"></i> Admin de usuarios</a>
         <div class="dropdown-divider" *ngIf="rolUser == 'ADMIN' || rolUser == 'MAESTRO' "></div>
         <!-- <a class="dropdown-item" href="#"><i class="icon-lock"></i> Bloquear</a> -->
@@ -72,13 +72,10 @@
         <a class="dropdown-item" href="#" (click)="closeSession()"><i class="cui-account-logout"></i> Salir</a>
       </div>
     </li>
-    <li class="nav-item dropdown">
-      <a class="nav-link navbar-toggler" href="#" appAsideMenuToggler>&#9776;</a>
-    </li>
   </ul>
 </app-header>
 <div class="app-body">
-  <app-sidebar [fixed]="false" [display]="'md'">
+  <app-sidebar [fixed]="false" [display]="'lg'">
     <app-sidebar-nav [navItems]="navItems" [perfectScrollbar] ></app-sidebar-nav>
   </app-sidebar>
   <!-- Main content -->
@@ -92,9 +89,6 @@
       <router-outlet></router-outlet>
     </div><!-- /.container-fluid -->
   </main>
-  <app-aside [fixed]="false" [display]="false">
-    
-  </app-aside>
 </div>
 <app-footer>
   <div class="container footer-container text-center text-md-left mt-3">
