--- a/src/app/aaacesa/previos/previos.component.html
+++ b/src/app/aaacesa/previos/previos.component.html
@@ -118,7 +118,7 @@
       <!-- End Status Filter Bar -->
                   
         <div class="table-responsive">
-          <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">                                   
+          <table mat-table [dataSource]="dataSource" matSort>                                   
           
             <ng-container matColumnDef="Master">
               <th mat-header-cell *matHeaderCellDef mat-sort-header> Guía Master </th>
