--- a/src/app/aaacesa/salidas/salidas.component.html
+++ b/src/app/aaacesa/salidas/salidas.component.html
@@ -115,7 +115,7 @@
       <!-- Start Data Table -->
       <!-- <div *ngIf="dataSource.data?.length" class="table-responsive"> -->
       <div class="table-responsive">
-          <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">                                   
+          <table mat-table [dataSource]="dataSource" matSort>                                   
           
             <ng-container matColumnDef="IdAdelantoSalidas">
               <th mat-header-cell *matHeaderCellDef mat-sort-header> Id Adelanto Salidas </th>
