--- a/src/app/aaacesa/general-summary/general-summary.component.scss
+++ b/src/app/aaacesa/general-summary/general-summary.component.scss
@@ -13,6 +13,9 @@
 .bg-green {
   background-color: #0AA010 !important;
 }
+.info-box {
+  background-color: white;
+}
 
 .border {
   border-radius: 100px 100px 100px 100px;
