--- a/src/app/aaacesa/dialogs/dialog-create-previos.component.html
+++ b/src/app/aaacesa/dialogs/dialog-create-previos.component.html
@@ -105,7 +105,7 @@
                   <mat-form-field style="width: 49%;" >
                     <input matInput type="number" formControlName="horaPrevioCtrl" style="text-align:center;" min="0" max="23" placeholder="Hrs" />
                   </mat-form-field>
-                  <strong style="font-size:1rem;">:</strong>
+                  <strong style="font-size:.5rem;">:</strong>
                   <mat-form-field style="width: 49%;">
                     <input matInput type="number" formControlName="minutoPrevioCtrl" style="text-align:center;" min="0" max="59"  placeholder="Mins" />
                   </mat-form-field>
