--- a/src/app/aaacesa/finanzas/finanzas.component.html
+++ b/src/app/aaacesa/finanzas/finanzas.component.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-
+<ngx-loading [show]="loading" [config]="{ fullScreenBackdrop: true }"></ngx-loading>
 <div class="animated fadeIn">
   <div class="card">
     <div class="card-body">
@@ -22,10 +22,10 @@
                 <div class="col-lg-3">
                     <div class="row justify-content-start">
                       <div class="col-sm-12 col-md-12 col-lg-12 col-xl-5 mb-1">
-                        <button (click)="facturasBusqueda()" class="btn btn-pill btn-primary"> <i class="fas fa-search"></i> Buscar </button>
+                        <button (click)="facturasBusqueda()" class="btn btn-pill btn-primary btn-sm"> <i class="fas fa-search"></i> Buscar </button>
                       </div>
                       <div class="col-sm-12 col-md-12 col-lg-12 col-xl-7 mb-1">
-                        <button (click)="NuevaBusquedaFinanzas()" class="btn btn-pill btn-primary"> Nueva Busqueda</button>
+                        <button (click)="NuevaBusquedaFinanzas()" class="btn btn-pill btn-primary btn-sm"> Nueva Busqueda</button>
                       </div>
                     </div>
                   </div>   
@@ -64,7 +64,7 @@
                 </ng-container>
 
                 <!-- FechaDeEmision Column -->
-              <ng-container matColumnDef="FechaDeEmision">
+              <ng-container matColumnDef="FechaEmision">
                   <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de emisión </th>
                   <td mat-cell *matCellDef="let element"> {{element.FechaEmision}} </td>
                 </ng-container>
@@ -103,10 +103,10 @@
                 <div class="col-lg-3">
                     <div class="row justify-content-start">
                       <div class="col-sm-12 col-md-12 col-lg-12 col-xl-5 mb-1">
-                        <button (click)="notasBusqueda()" class="btn btn-pill btn-primary"> <i class="fas fa-search"></i> Buscar</button>
+                        <button (click)="notasBusqueda()" class="btn btn-pill btn-primary btn-sm"> <i class="fas fa-search"></i> Buscar</button>
                       </div>
                       <div class="col-sm-12 col-md-12 col-lg-12 col-xl-7 mb-1">
-                        <button (click)="NuevaBusquedaNotas()" class="btn btn-pill btn-primary"> Nueva Busqueda</button>
+                        <button (click)="NuevaBusquedaNotas()" class="btn btn-pill btn-primary btn-sm"> Nueva Busqueda</button>
                       </div>
                     </div>
                   </div>   
@@ -145,7 +145,7 @@
                 </ng-container>
 
                 <!-- FechaDeEmision Column -->
-              <ng-container matColumnDef="FechaDeEmision">
+              <ng-container matColumnDef="FechaEmision">
                   <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de emisión </th>
                   <td mat-cell *matCellDef="let element"> {{element.FechaEmision}} </td>
                 </ng-container>
@@ -154,8 +154,8 @@
               <ng-container matColumnDef="Descargar">
                   <th mat-header-cell *matHeaderCellDef mat-sort-header> Descargar </th>
                   <td mat-cell *matCellDef="let element">
-                    <a class="btn" (click)="getPDF(element)"><i class="fas fa-file-pdf"></i></a>
-                    <a class="btn" (click)="getXML(element)"><i class="far fa-file-code"></i></a>
+                    <a class="btn" (click)="getPDF(element)" ><i class="fas fa-file-pdf u-cursor"></i></a>
+                    <a class="btn" (click)="getXML(element)" ><i class="far fa-file-code u-cursor"></i></a>
                   </td>
                 </ng-container>
 
@@ -179,10 +179,10 @@
               <div class="col-lg-3">
                 <div class="row justify-content-start">
                   <div class="col-sm-12 col-md-12 col-lg-12 col-xl-5 mb-1">
-                    <button (click)="ComplementoBusqueda()" class="btn btn-pill btn-primary"> <i class="fas fa-search"></i> Buscar</button>
+                    <button (click)="ComplementoBusqueda()" class="btn btn-pill btn-primary btn-sm"> <i class="fas fa-search"></i> Buscar</button>
                   </div>
                   <div class="col-sm-12 col-md-12 col-lg-12 col-xl-7 mb-1">
-                    <button (click)="NuevaBusquedaComplemento()" class="btn btn-pill btn-primary"> Nueva Busqueda</button>
+                    <button (click)="NuevaBusquedaComplemento()" class="btn btn-pill btn-primary btn-sm"> Nueva Busqueda</button>
                   </div>
                 </div>
               </div>  
@@ -235,7 +235,10 @@
                   <!-- Descargar Column -->
                 <ng-container matColumnDef="Descargar">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Descargar </th>
-                    <td mat-cell *matCellDef="let element"> {{element.Descargar}} </td>
+                    <td mat-cell *matCellDef="let element"> 
+                        <a class="btn" (click)="getComplementoPDF(element)" ><i class="fas fa-file-pdf u-cursor"></i></a>
+                        <a class="btn" (click)="getComplementoXML(element)" ><i class="far fa-file-code u-cursor"></i></a>
+                    </td>
                   </ng-container>
   
                 <tr mat-header-row *matHeaderRowDef="CPColumns"></tr>
@@ -258,10 +261,10 @@
               <div class="col-lg-3">
                 <div class="row justify-content-start">
                   <div class="col-sm-12 col-md-12 col-lg-12 col-xl-5 mb-1">
-                    <button (click)="EstadosBusqueda()" class="btn btn-pill btn-primary"> <i class="fas fa-search"></i> Buscar</button>
+                    <button (click)="EstadosBusqueda()" class="btn btn-pill btn-primary btn-sm"> <i class="fas fa-search"></i> Buscar</button>
                   </div>
                   <div class="col-sm-12 col-md-12 col-lg-12 col-xl-7 mb-1">
-                    <button (click)="NuevaBusquedaEstados()" class="btn btn-pill btn-primary"> Nueva Busqueda</button>
+                    <button (click)="NuevaBusquedaEstados()" class="btn btn-pill btn-primary btn-sm"> Nueva Busqueda</button>
                   </div>
                 </div>
               </div>  
